Hide mobile elements

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <!-- Mobile-Specific Content -->
+    <!-- Mobile-Specific Content
     <div class="mobile-content">
         <div class="ascii-container">
             <pre id="ascii-art">
@@ -42,7 +42,7 @@ V  \
                 href="https://github.com/anotherbazeinthewall">GitHub</a></h4>
         <h4>San Francisco, CA</h4>
         <span>&nbsp;</span>
-    </div>
+    </div> -->
 
     <!-- Desktop-Specific Content -->
     <div id="terminal"></div>
