--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <div id="terminal"></div>
+    <script src="messageTypes.js"></script>
     <script src="terminal.js"></script>
 </body>
 
